--- a/aulas/11-Tabela/index.html
+++ b/aulas/11-Tabela/index.html
@@ -4,33 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabela</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
     <h1>Tabela do FILIPE</h1>
 
     <table style="border: 1px solid black;">
-        <tr>
+
+        <tr class="tr">
             <th style="border: 1px solid black;">Nome</th>
             <th style="border: 1px solid black;">Sobrenome</th>
             <th style="border: 1px solid black;">Idade</th>
             <th style="border: 1px solid black;">CPF</th>
             <th style="border: 1px solid black;">Profissão</th>
-            <tr>
-                <td style="border: 1px solid black;">Filipe</td>
+            <th style="border: 1px solid black;">cidade</th>
+
+        <tr>
+                <td class="td" style="border: 1px solid black;">Filipe</td>
                 <td style="border: 1px solid black">Ribeiro</td>
                 <td style="border: 1px solid black;">30</td>
                 <td style="border: 1px solid black;">421.083.138.77</td>
                 <td style="border: 1px solid black;">Desenvolvedor</td>
-            </tr>
+                <td style="border: 1px solid black;">Praia Grande</td>
+
+
+                <tr>
+
+                    <td style="border: 5px solid black;">ana</td>
+                    <td style="border: 5px solid black;">ribeiro</td>
+                    <td style="border: 5px solid black;">23</td>
+                    <td style="border: 5px solid black;">123456789-00</td>
+                    <td style="border: 5px solid black;">devSenior</td>
+                    <td style="border: 5px solid black;">Praia Grande</td>
+
+                </tr>
+    </table>
+
+  <!-- <h1>Minha segunda tabela</h1>
+
+    <table style="border: 5px solid black">
+        <tr>
+            <td>nome:</td>
+            <td>sobrenome:</td>
+            <td>cpf:</td>
+            <td>profissão:</td>
+            <td>:</td>
+            <td>Nome:</td>
+            <td>Nome:</td>
+            <td>Nome:</td>
+            <td>Nome:</td>
+            <td>Nome:</td>
         </tr>
-    </table>
+    </table>-->
 
-    <h1>Minha segunda tabela</h1>
-
-    <table>
-        <thead></thead>
-    </table>
-    
 </body>
 </html>
