--- a/aulas/28-formulario/form02.html
+++ b/aulas/28-formulario/form02.html
@@ -14,12 +14,12 @@
     <form action="cadastro.javascript" method="get" autocomplete="on">
         <p>
             <label for="iusu">Usuario</label>
-            <input type="text" name="usu" id="iusu" required minlength="8" size="10" placeholder="Nome">
+            <input type="text" name="usu" id="iusu" required minlength="8" size="10" placeholder="Nome" autocomplete="name">
             
         </p>
         <p>
             <label for="isen">Senha</label>
-            <input type="password" name="sen" id="isen" required minlength="8" size="10" placeholder="Senha">
+            <input type="password" name="sen" id="isen" required minlength="8" size="10" placeholder="Senha" autocomplete="senha">
         </p>
         <p>
             <input type="submit" value="Enviar">
