--- a/aulas/28-formulario/form.html
+++ b/aulas/28-formulario/form.html
@@ -10,9 +10,18 @@
     <h1>Formulário</h1>
 
     <form action="cadastro.javascript" method="POST"><!--Dentro de form autocomplet off-->
-        <p><label for="inome">Nome:</label><input type="text" name="nome" id="inome"></p>
-        <p><label for="isobrenome">Sobrenome:</label><input type="text" name="sobrenome" id="isobrenome"></p>
+
+        <fieldset>
+
+            <legend>Dados pessoais</legend>
+
+                <p><label for="inome">Nome:</label><input type="text" name="nome" id="inome"></p>
+                <p><label for="isobrenome">Sobrenome:</label><input type="text" name="sobrenome" id="isobrenome"></p>
+
+        </fieldset>
+
         <input type="submit" value="Enviar">
+
     </form>
     
 </body>
