--- a/aulas/28-formulario/formulário01.html
+++ b/aulas/28-formulario/formulário01.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
+    <title>Formulário</title>
 </head>
 <body>
 
-    <h1>Cadastro</h1>
+    <h1>Descrição de formulário</h1>
+
+    <p>Autocomplete tambem da para colocar no input.</p>
+    <p>Estudar sobre RegEX</p>
     
 </body>
 </html>
