--- a/aulas/30-mobilefirst.mq/mq5/index.html
+++ b/aulas/30-mobilefirst.mq/mq5/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MediaQuery/First Mobile 3</title>
+    <link rel="stylesheet" href="estilos/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 
@@ -13,7 +15,9 @@
             Meu Site
         </h1>
 
-        <menu>
+        <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
+
+        <menu id="itens">
 
             <ul>
                 <li><a href="#">opção 1</a></li>
@@ -46,6 +50,17 @@
         </article>
 
     </main>
+
+    <script>
+
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 
     
 </body>
