--- a/aulas/30-mobilefirst.mq/mq5/index.html
+++ b/aulas/30-mobilefirst.mq/mq5/index.html
@@ -6,8 +6,10 @@
     <title>MediaQuery/First Mobile 3</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
-<body>
+
+<body onresize="mudouTamanho()">
 
     <header>
 
@@ -52,6 +54,14 @@
     </main>
 
     <script>
+
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                itens.style.display = 'block'
+            } else {
+                itens.style.display = 'none'
+            }
+        }
 
         function clickMenu() {
             if (itens.style.display == 'block') {
