--- a/aulas/31-flexbox/flexbox1/flex.html
+++ b/aulas/31-flexbox/flexbox1/flex.html
@@ -6,6 +6,34 @@
     <title>Flex Box</title>
 </head>
 <body>
+
+    <style>
+        .container {
+            background-color: red;
+            display: flex;
+           /* flex-direction: row;
+            flex-wrap: nowrap; */
+            flex-flow: row nowrap;
+        }
+
+        .i {
+            background-color: blue;
+            border: 1px solid black;
+            text-align: center;
+            flex: auto;
+        }
+
+    </style>
+
+<div class="container">
+    <div class="i">Exemplo de bloco A</div>
+    <div class="i">Exemplo de bloco B</div>
+    <div class="i">Exemplo de bloco C</div>
+    <div class="i">Exemplo de bloco D</div>
+</div>
+
+
+
     
 </body>
 </html>
